--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/task1.js" defer></script>
-    <script src="./js/task2.js" defer></script>
-    <script src="./js/task3.js" defer></script>
-    <script src="./js/task4.js" defer></script>
+
 </head>
 <body>
-    
+
+    <!-- <script src="./js/task1.js" ></script> -->
+    <!-- <script src="./js/task2.js" ></script> -->
+    <!-- <script src="./js/task3.js" ></script> -->
+    <script src="./js/task4.js" ></script>
 </body>
 </html>
